--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <h2>My beginner attempt for web dev</h2>
 <hr/>
 <br>
-<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/second%20page.html"><img src="C:\Users\veerv\OneDrive\Desktop\WEB DEV\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
+<a href="./second webpage.html"><img src="C:\Users\veerv\OneDrive\Desktop\WEB DEV\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
 <h3> I am Veer Viswajit.N, it's my amateur attempt for web dev... To tell About myself,</h3>
 <ul>
 <li>I am good at studying a bit and also mastered the skill of procrastination, but i don't miss out the deadlines</li>
 <li>I am big time movie buff, Can't say that i watch all films but i don't leave out the cult classics</li>
 <li>I love watching series</li>
 </ul>
-<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/Third%20webpage.html">My list of recommendations</a>
+<a href="./Third webpage.html">My list of recommendations</a>
 </body>
 
 </html>
