--- a/second page.html
+++ b/second page.html
@@ -12,7 +12,7 @@
 <hr/>
 <h3>Me searching for the bat signal(I am Batman)</h3>
 <br>
-<img src="C:\Users\veerv\OneDrive\Pictures\OOTY OUR FAMILY\28.jpg" height="300" alt="Me pointing at the sky"/>
+<img src="./28.jpg" height="300" alt="Me pointing at the sky"/>
 
 </body>
 
