--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Veer's portfolio</h1>
+<h1 style="font-family: Georgia, serif">Veer's Portfolio</h1>
 <h2>My beginner attempt for web dev</h2>
 <hr/>
 <br>
