--- a/index.html
+++ b/index.html
@@ -4,21 +4,52 @@
 <head>
 <meta charset="UTF-8">
 <title>VEER FIRST</title>
+<style>
+    html{
+        background-color: lightsteelblue;
+        font-weight: 300;
+        font-style: oblique;
+        font-size: larger;
+        text-align: justify;
+    }
+    img{
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+    footer{
+        clear:both;
+    }
+    .list1{
+        margin-left: 30px;
+    }
+
+</style>
 </head>
 
 <body>
-<h1 style="font-family: Inria Serif-BoldItalic">Veer's Portfolio</h1>
+<h1>Veer's Portfolio</h1>
 <h2>My beginner attempt for web dev</h2>
 <hr/>
 <br>
-<a href="./second page.html"><img src="./21.jpg" height="300"  alt="Me sitting on a rock"/></a>
+<div class="First">
+<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/second%20page.html"><img src="C:\Users\veerv\OneDrive\Desktop\WEB DEV\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
 <h3> I am Veer Viswajit.N, it's my amateur attempt for web dev... To tell About myself,</h3>
 <ul>
+<div class="list1">
 <li>I am good at studying a bit and also mastered the skill of procrastination, but i don't miss out the deadlines</li>
 <li>I am big time movie buff, Can't say that i watch all films but i don't leave out the cult classics</li>
 <li>I love watching series</li>
+<li>I love coding and currently learing to be a full stack developer</li>
+<li>I happen to be a fun person as regarded by my friends and family</li>
+<li>I consider myself to be having a personality of an <a href="https://dictionary.cambridge.org/dictionary/english/ambivert">Ambivert</a> </li>
+
+</div>
 </ul>
-<a href="./Third webpage.html">My list of recommendations</a>
+</div>
+<footer>
+<a style="clear=left" href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/Third%20webpage.html">My list of recommendations for Movies and series</a>
+</footer>
 </body>
 
 </html>
