--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr/>
 <br>
 <div class="First">
-<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/second%20page.html"><img src="C:\Users\veerv\OneDrive\Desktop\WEB DEV\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
+<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/second%20page.html"><img src=".\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
 <h3> I am Veer Viswajit.N, it's my amateur attempt for web dev... To tell About myself,</h3>
 <ul>
 <div class="list1">
