--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr/>
 <br>
 <div class="First">
-<a href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/second%20page.html"><img src=".\21.jpg" height="300"  alt="Me sitting on a rock"/></a>
+<a href="./second page.html"><img src="./21.jpg" height="300" alt="Me sitting on a rock"/></a>
 <h3> I am Veer Viswajit.N, it's my amateur attempt for web dev... To tell About myself,</h3>
 <ul>
 <div class="list1">
@@ -48,7 +48,7 @@
 </ul>
 </div>
 <footer>
-<a style="clear=left" href="file:///C:/Users/veerv/OneDrive/Desktop/WEB%20DEV/Third%20webpage.html">My list of recommendations for Movies and series</a>
+<a href="./Third webpage.html">My list of recommendations for Movies and Series</a>
 </footer>
 </body>
 
