second page.html

--- a/second page.html
+++ b/second page.html
@@ -4,6 +4,15 @@
 <head>
 <meta charset="UTF-8">
 <title>VEER II page</title>
+<style>
+html{
+    background-color: lightsteelblue;
+    font-weight: 300;
+    font-style: oblique;
+    font-size: larger;
+    text-align: justify;
+}
+</style>
 </head>
 
 <body>
