Third webpage.html

--- a/Third webpage.html
+++ b/Third webpage.html
@@ -4,6 +4,28 @@
 <head>
 <meta charset="UTF-8">
 <title>Veer's Portfolio</title>
+<style>
+html{
+    background-color: lightsteelblue;
+    font-weight: 300;
+    font-style: oblique;
+    font-size: larger;
+    text-align: justify;
+}
+*{
+  background-color: lavender;
+  margin: 10px;
+ }
+h1{
+      font-family: Georgia,Verdana;
+  }
+h2{
+    font-family: Georgia,Verdana;
+  }
+h3{
+  margin-left: 3px;
+  }
+</style>
 </head>
 
 <body>
