Third webpage.html

--- a/Third webpage.html
+++ b/Third webpage.html
@@ -45,7 +45,8 @@ h3{
 <li>The Good,the Bad and the ugly</li>
 </ol>
 <br>
-<h2>Tamil</h2>
+<a href="./triology.html">Check Out The Top 3 Triologies Of All Time</a>
+<h3>Tamil</h3>
 <ol>
 <li>Devar Magan</li>
 <li>Nayagan</li>
